setup frontend components & css